Complete code refactoring, add new Mapper classes